--- a/QTasMarketing.Web/appsettings.json
+++ b/QTasMarketing.Web/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "MarketingContext": "Data Source=(local);Initial Catalog=MarketingDB;Integrated Security = true",
+    "MarketingContext": "Data Source=(local);Initial Catalog=Portal;Integrated Security = true",
     "IdentityContext": "Data Source=(local);Initial Catalog=IdentityDB;Integrated Security = true"
 
 
