--- a/QTasMarketing.Web/QTasMarketing.Web.csproj
+++ b/QTasMarketing.Web/QTasMarketing.Web.csproj
@@ -1,8 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-    <AssemblyVersion>20.19.19.19</AssemblyVersion>
-    <FileVersion>20.19.19.19</FileVersion>
+    <AssemblyVersion>30.29.29.29</AssemblyVersion>
+    <FileVersion>30.29.29.29</FileVersion>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="AdminLTE" Version="2.4.0" />
@@ -18,14 +18,14 @@
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.3" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\QtasMarketing.Core\QtasMarketing.Core.csproj" />
-    <ProjectReference Include="..\QtasMarketing.Infrastructure\QtasMarketing.Infrastructure.csproj" />
-    <ProjectReference Include="..\QtasMarketing.Services\QtasMarketing.Services.csproj" />
-    <ProjectReference Include="..\QTasMarketing.Web.Framework\QTasMarketing.Web.Framework.csproj" />
-  </ItemGroup>
-  <ItemGroup>
     <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Areas\Admin\Models\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Portal.core\Portal.core.csproj" />
+    <ProjectReference Include="..\Portal.Infrastructure\Portal.Infrastructure.csproj" />
+    <ProjectReference Include="..\Portal.Service\Portal.Service.csproj" />
+    <ProjectReference Include="..\Portal.Web.Framework\Portal.Web.Framework.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Kendo.Mvc">
