--- a/Portal.Service/Portal.Service.csproj
+++ b/Portal.Service/Portal.Service.csproj
@@ -2,13 +2,17 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-    <AssemblyVersion>12.11.11.11</AssemblyVersion>
-    <FileVersion>12.11.11.11</FileVersion>
+    <AssemblyVersion>19.18.18.18</AssemblyVersion>
+    <FileVersion>19.18.18.18</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Portal.core\Portal.core.csproj" />
     <ProjectReference Include="..\Portal.Infrastructure\Portal.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Media\" />
   </ItemGroup>
 
 </Project>
