--- a/Portal.core/Portal.core.csproj
+++ b/Portal.core/Portal.core.csproj
@@ -15,4 +15,10 @@
     <ProjectReference Include="..\Portal.CrossCutting\Portal.CrossCutting.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Microsoft.Extensions.Identity.Stores">
+      <HintPath>..\..\..\..\..\..\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.extensions.identity.stores\2.0.3\lib\netstandard2.0\Microsoft.Extensions.Identity.Stores.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
