--- a/Portal.Service/Portal.Service.csproj
+++ b/Portal.Service/Portal.Service.csproj
@@ -2,9 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-    <AssemblyVersion>19.18.18.18</AssemblyVersion>
-    <FileVersion>19.18.18.18</FileVersion>
+    <AssemblyVersion>22.21.21.21</AssemblyVersion>
+    <FileVersion>22.21.21.21</FileVersion>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="ImageResizer" Version="4.2.5" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Portal.core\Portal.core.csproj" />
