--- a/ServicesTest/ServicesTest.csproj
+++ b/ServicesTest/ServicesTest.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
+
+    <AssemblyVersion>4.3.3.3</AssemblyVersion>
+
+    <FileVersion>4.3.3.3</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
