--- a/Portal.core/Portal.core.csproj
+++ b/Portal.core/Portal.core.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.3" />
+    <PackageReference Include="Microsoft.NetFX20" Version="1.0.3" />
     <PackageReference Include="RedLock.net" Version="1.7.4" />
     <PackageReference Include="StackExchange.Redis.Extensions.Core" Version="2.0.0" />
   </ItemGroup>
