--- a/QTasMarketing.Web/QTasMarketing.Web.csproj
+++ b/QTasMarketing.Web/QTasMarketing.Web.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.jQuery.Unobtrusive.Validation" Version="3.2.9" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.3" />
     <PackageReference Include="NToastNotify" Version="5.0.7" />
+    <PackageReference Include="Select2.js" Version="4.0.5" />
     <PackageReference Include="Telerik.UI.for.AspNet.Core" Version="2018.1.117" />
   </ItemGroup>
   <ItemGroup>
