--- a/Portal.Service/Portal.Service.csproj
+++ b/Portal.Service/Portal.Service.csproj
@@ -9,7 +9,7 @@
   <ItemGroup>
     <PackageReference Include="ImageResizer" Version="4.2.5" />
     <PackageReference Include="ImageSharp" Version="1.0.0-alpha9-00194" />
-    <PackageReference Include="System.Drawing.Common" Version="4.5.0-rc1" />
+    <PackageReference Include="System.Drawing.Common" Version="4.5.0" />
   </ItemGroup>
 
   <ItemGroup>
