--- a/QTasMarketing.Web/QTasMarketing.Web.csproj
+++ b/QTasMarketing.Web/QTasMarketing.Web.csproj
@@ -1,6 +1,6 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
     <AssemblyVersion>45.44.44.44</AssemblyVersion>
     <FileVersion>45.44.44.44</FileVersion>
   </PropertyGroup>
@@ -109,13 +109,13 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="AdminLTE" Version="2.4.0" />
-    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="3.2.0" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="4.0.1" />
     <PackageReference Include="FontAwesome" Version="4.7.0" />
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.8" />
+    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.1" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.3" />
-    <PackageReference Include="NToastNotify" Version="5.0.7" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
+    <PackageReference Include="NToastNotify" Version="5.0.8" />
     <PackageReference Include="Select2.js" Version="4.0.5" />
     <PackageReference Include="Telerik.UI.for.AspNet.Core" Version="2018.2.516" />
   </ItemGroup>
