--- a/Portal.CrossCutting/Portal.CrossCutting.csproj
+++ b/Portal.CrossCutting/Portal.CrossCutting.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
     <AssemblyVersion>17.16.16.16</AssemblyVersion>
     <FileVersion>17.16.16.16</FileVersion>
   </PropertyGroup>
