--- a/Portal.core/Portal.core.csproj
+++ b/Portal.core/Portal.core.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
     <AssemblyVersion>21.20.20.20</AssemblyVersion>
     <FileVersion>21.20.20.20</FileVersion>
   </PropertyGroup>
