--- a/Portal.Service/Portal.Service.csproj
+++ b/Portal.Service/Portal.Service.csproj
@@ -8,13 +8,14 @@
 
   <ItemGroup>
     <PackageReference Include="ImageResizer" Version="4.2.5" />
-    <PackageReference Include="ImageSharp" Version="1.0.0-alpha9-00194" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="1.0.0-beta0005" />
     <PackageReference Include="System.Drawing.Common" Version="4.5.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Portal.core\Portal.core.csproj" />
     <ProjectReference Include="..\Portal.Infrastructure\Portal.Infrastructure.csproj" />
+   
   </ItemGroup>
 
   <ItemGroup>
