--- a/QTasMarketing.Web/QTasMarketing.Web.csproj
+++ b/QTasMarketing.Web/QTasMarketing.Web.csproj
@@ -111,10 +111,10 @@
     <PackageReference Include="AdminLTE" Version="2.4.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="5.0.1" />
     <PackageReference Include="FontAwesome" Version="4.7.0" />
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.3" />
+    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.5" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.1.3" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.2" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.4" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.5" />
     <PackageReference Include="NToastNotify" Version="5.0.8" />
     <PackageReference Include="Select2.js" Version="4.0.5" />
     <PackageReference Include="Telerik.UI.for.AspNet.Core" Version="2018.2.516" />
@@ -594,8 +594,10 @@
     <None Include="bower_components\jQuery\test\xhtml.php" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Portal.Infrastructure\Portal.Infrastructure.csproj" />
-    <ProjectReference Include="..\Portal.Service\Portal.Service.csproj" />
+    <ProjectReference Include="..\Portal.Standard.Core\Portal.Standard.Core.csproj" />
+    <ProjectReference Include="..\Portal.Standard.CrossCutting\Portal.Standard.CrossCutting.csproj" />
+    <ProjectReference Include="..\Portal.Standard.Infrastructure\Portal.Standard.Infrastructure.csproj" />
+    <ProjectReference Include="..\Portal.Standard.Service\Portal.Standard.Service.csproj" />
     <ProjectReference Include="..\Portal.Web.Framework\Portal.Web.Framework.csproj" />
   </ItemGroup>
   <ItemGroup>
